# otus-ds-basic-tutorial

./: .gitignore  README.md  parsing.ipynb  pyproject.toml
notebooks/: numpy.ipynb  pandas.ipynb  parsing.ipynb
