[project]
name = "otus-ds-basic-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.30.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "requests>=2.32.4",
]
